# pebble-tree-sitter

./: .gitattributes  CMakeLists.txt  Cargo.toml  Makefile  README.md  binding.gyp  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-pebble.h  tree-sitter-pebble.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_pebble/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
examples/: example.pebble
queries/: highlights.scm
src/: grammar.json  node-types.json  parser.c  scanner.c
